1_depolyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: 'true'
        sidecar.opentelemetry.io/inject: 'true'
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: springcommunity/spring-framework-petclinic:latest
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: petclinic-nodeport-service
spec:
  type: NodePort 
  selector: 
    app: petclinic
  ports: 
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 31233
